[WebVTT] Update dom construction logic for timestamp per spec

According to the spec [1] we need to include optional components
and add leading zeros if required for timestamp construction.
[1]: https://w3c.github.io/webvtt/#dom-construction-rules

Bug: 786382
Change-Id: I2b7320bd6b187cb3b85a5532c0a0fd398b3888cf
Reviewed-on: https://chromium-review.googlesource.com/773763
Commit-Queue: srirama chandra sekhar <srirama.m@samsung.com>
Reviewed-by: Fredrik Söderquist <fs@opera.com>
Cr-Commit-Position: refs/heads/master@{#517767}